# purview

./: .gitattributes  .gitignore  ChangeLog.md  LICENSE  Makefile  README.md  bridge.cabal  load.json  package.yaml  purview.cabal  stack.yaml  todo.org
.github/workflows/: test.yml
app/: Main.hs  Shop.hs
e2e-tests/: cabal.project  e2e-tests.cabal
e2e-tests/js/: package-lock.json  package.json
examples/: AlgebraicEffects.hs  Counter.hs  EventOrderingCheck.hs  ExpandingList.hs  GettingInput.hs  Main.hs  Navigation.hs  ServerTime.hs  TodoList.hs  Typings.hs
examples/examples/: hooks.hs
performance/: Criterion.hs  perf.html
shell/: Main.hs
src/: CleanTree.hs  CollectInitials.hs  Component.hs  ComponentHelpers.hs  ComponentSpec.hs  Configuration.hs  Diffing.hs  DiffingSpec.hs  EventHandling.hs  EventHandlingSpec.hs  EventLoop.hs  Events.hs  EventsSpec.hs  Experiment.hs  Experiment2.hs  Experiment3.lhs  Experiment4.hs  Experiment5.hs  Experiment6.hs  Experiment7.lhs  Lib.hs  LibSpec.hs  PrepareTree.hs  PrepareTreeSpec.hs  Purview.hs  PurviewSpec.hs  Rendering.hs  RenderingSpec.hs  Server.hs  Shop.hs  Style.hs  StyleSpec.hs  Todo.hs  TreeGenerator.hs  TreeGeneratorSpec.hs  Wrapper.hs
src/Purview/: Server.hs
src/experiments/: Experiment10.hs  Experiment11.lhs  Experiment12.hs  Experiment13.hs  Experiment14.lhs  (+16 more)
test/: DiffingSpec.hs  EventHandlingSpec.hs  PrepareTreeSpec.hs  PurviewSpec.hs  RenderingSpec.hs  StyleSpec.hs  TreeGenerator.hs
tests/: DiffingSpec.hs  EventHandlingSpec.hs  PrepareTreeSpec.hs  PurviewSpec.hs  RenderingSpec.hs  TreeGenerator.hs
(+1 files in other folders)
